plugins {
    id 'application'
}
apply plugin: 'java'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.opencsv:opencsv:5.5.2'
}



// Define the main class of your application
application {
    mainClass = 'Main'  // Replace with your actual main class
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

